fix margin shift with clear button

--- a/addon/styles/addon.scss
+++ b/addon/styles/addon.scss
@@ -15,6 +15,7 @@ $margin: 1px; // Note: margin + border width equals border width of focus state
 $padding: 0 19px 0 6px;
 
 .frost-text {
+  margin-right: 10px;
   &.error {
     > input {
       border: $error-border;
@@ -52,14 +53,18 @@ $padding: 0 19px 0 6px;
 
   }
 
-    .close {
-      position: relative;
-      left: -20px;
-      top: 1px;
-      height: 15px;
-      width: 15px;
-      color: $frost-color-grey-6;
-      cursor: pointer;
-    }
+  .close {
+    position: relative;
+    left: -20px;
+    top: 1px;
+    height: 15px;
+    width: 15px;
+    color: $frost-color-grey-6;
+    cursor: pointer;
+  }
+
+  &.show-clear {
+    margin-right: -2px;
+  }
 
 }
