--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -20,3 +20,9 @@ html, body {
   padding: 20px 0 10px 20px;
   font-weight: bold;
 }
+
+.row {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
